# textract-tiquu

./: README.md  main.py  pdf2pdfCleansing.ipynb  pdf_cleaner.py  pyproject.toml  requirements.txt  textract-demo.ipynb
data/: extracted_data.txt
data/results/: What_is_Sustainability-1_chunks.txt  paragraphs.csv  paragraphs.txt
notebooks/: complete-extract-2-chunk-pipeline.ipynb  dspy.ipynb  section extraction.ipynb  semantic-chunkers.ipynb  test-chunkers.ipynb  textract-demo.ipynb  textract-llm.ipynb
old/: app.py  docker-compose.yml  examples.py  pdf_cleaner.py
scripts/: cleanup.sh  setup.sh
text_processing/: chunkers.py  load_and_chunk.py  main.py
text_processing/doc_models/: blocks.py  chunks.py  documents.py
