[project]
name = "textract-tiquu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "pdfplumber>=0.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "torch>=2.7.1",
    "transformers>=4.51.3",
    "wtpsplit>=2.1.6",
]
